clang/test/BSC/Negative/Driver/options/std_option/std_option.cbs
// RUN: %clang_cc1 -std=c11 -verify %s
// RUN: %clang_cc1 -std=c89 -verify %s
// RUN: %clang_cc1 -std=c99 -verify %s
// RUN: %clang_cc1 -std=c17 -verify %s

struct Foo {
};
// expected-error@+2 {{cannot combine with previous 'int' declaration specifier}}
// expected-error@+1 {{expected identifier or '('}}
int struct Foo::getA(struct Foo* this) { 
    return 1;
}
